# SmartDocs-Assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
apps/api/: main.py
apps/api/routers/: booking.py  chat.py  upload.py
apps/frontend/: streamlit_app.py
docs/: setup_apis.md
scripts/: ingest_docs.py
